added mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Quattrocento:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="mobile-style.css">
     <title>Edward's Salon & Topiary</title>
 </head>
 
@@ -17,20 +18,20 @@
         <img src="Images/white-X.png" class="close-btn" id="close-menu">
 
         <ul>
-            <li>
-                <a href="#" id="open-about-me">About Me</a>
+            <li id="open-about-me">
+                <a href="#" >About Me</a>
                 <span>Get to know me.</span>
             </li>
-            <li>
-                <a href="#" id="open-salon">Salon</a>
+            <li id="open-salon">
+                <a href="#">Salon</a>
                 <span>See my salon work.</span>
             </li>
-            <li>
-                <a href="#" id="open-topiary">Topiary</a>
+            <li id="open-topiary">
+                <a href="#">Topiary</a>
                 <span>See my hedge work.</span>
             </li>
-            <li>
-                <a href="#" id="open-contact" style="color:black">Book Now</a>
+            <li id="open-contact">
+                <a href="#" style="color:black">Book Now</a>
                 <span style="color:black">Let's get cutting!</span>
             </li>
         </ul>
