--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
     <nav id="overlay-menu">
-        <img src="Images/white-X.png" class="close-btn" id="close-menu">
+        <img src="images/white-X.png" class="close-btn" id="close-menu">
 
         <ul>
             <li id="open-about-me">
@@ -51,7 +51,7 @@
 
     <div class="about-me" id="overlay-about-me">
 
-        <img src="Images/black-X.png" class="close-btn" id="close-about-me">
+        <img src="images/black-X.png" class="close-btn" id="close-about-me">
 
         <div class="bio">
             <p>My name is Edward! I'm an artificially created humanoid who is almost
@@ -82,7 +82,7 @@
     </div>
 
     <div class="salon" id="overlay-salon">
-        <img src="Images/white-X.png" class="close-btn" id="close-salon">
+        <img src="images/white-X.png" class="close-btn" id="close-salon">
 
         <div class="video-container">
             <iframe width="60%" height="500" src="https://www.youtube.com/embed/59__AXVLSTY" frameborder="0"
@@ -143,7 +143,7 @@
     </div>
 
     <div class="topiary" id="overlay-topiary">
-        <img src="Images/black-X.png" class="close-btn" id="close-topiary">
+        <img src="images/black-X.png" class="close-btn" id="close-topiary">
 
         <div class="video-container">
             <iframe width="60%" height="500" src="https://www.youtube.com/embed/MpGfBRP29-A" frameborder="0"
@@ -204,7 +204,7 @@
 
 
     <div class="contact" id="contact-page">
-        <img src="Images/white-X.png" class="close-btn" id="close-contact">
+        <img src="images/white-X.png" class="close-btn" id="close-contact">
         <div class="form">
             <form action="form-results.html" method="GET" enctype="multipart/form-data" id="contact-form">
                 <div>
